feat: 为V面板建筑操作按钮添加点击音效、操作提示与拆除状态反馈